fix z-index issue

--- a/static/styles/media_queries.scss
+++ b/static/styles/media_queries.scss
@@ -182,3 +182,12 @@
 	}
 	
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 568px) {
+
+#mapcontainer {
+    height: 100%;
+    position: relative;
+    overflow: scroll;
+}
+}
